tests/negative/test_ret_eval_ref.orb
eval (fnc foo () i32 {
    sym x:i32;
    ret x;
});

fnc main () () {
    eval (= (foo) 0);
};